# rce

./: .gitignore  CMakeLists.txt  Makefile  README.md  client  cmake_install.cmake  host
src/: client.cpp  file_manager.cpp  file_manager.h  host.cpp  main.cpp  test.py
src/utilities/: bridge.h  client.cpp  file_manager.cpp  file_manager.h  host.cpp
